<resources>
    <string name="app_name">Movie</string>
    <string name="retry">Try Again</string>
    <string name="lbl_name">Movie Name</string>
    <string name="welcome">Welcome</string>
    <string name="lbl_welcome">Let\'s relax and watch a movie</string>
    <string name="lbl_error">Something wrong, please check your internet connection</string>
    <string name="sample_overview">Inspired by the gripping true story of a man who would do anything for his family—and for freedom. When Peter, an enslaved man, risks his life to escape and return to his family, he embarks on a perilous journey of love and endurance.</string>
    <string name="lbl_overview">Overview :</string>
    <string name="lbl_review">Review :</string>
    <string name="empty_review">Empty Review</string>
</resources>