<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_moviedb"
    android:orientation="vertical"
    tools:context=".ui.main.MainActivity">

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:text="@string/welcome"/>

    <TextView
        android:id="@+id/tv_lets"
        android:layout_below="@id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:text="@string/lbl_welcome"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_movie"
        android:layout_below="@+id/tv_lets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_movie" />

    <TextView
        android:id="@+id/tv_empty_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_error"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textAlignment="center"
        android:layout_marginHorizontal="24dp"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>