<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/blue_moviedb"
    tools:context=".ui.detail.DetailMovieActivity">

    <ImageView
        android:id="@+id/iv_backdrop"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/img_backdrop" />

    <ImageView
        android:id="@+id/iv_trailer"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignTop="@+id/iv_backdrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:alpha="0.9"
        android:src="@drawable/ic_baseline_play_circle_filled_24"/>

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="130dp"
        android:layout_height="190dp"
        android:layout_below="@+id/iv_backdrop"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="12dp"
        android:layout_marginTop="-100dp"
        android:src="@drawable/poster_sample" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:tint="@color/blue_moviedb"
        app:fabCustomSize="40dp"
        android:src="@drawable/ic_baseline_arrow_back_24"
        android:layout_margin="12dp"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_below="@+id/iv_backdrop"
        android:layout_toEndOf="@+id/iv_photo"
        android:layout_width="wrap_content"
        android:textColor="@color/white"
        android:layout_margin="12dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/lbl_name"/>

    <TextView
        android:id="@+id/tv_lbl_overview"
        android:layout_below="@id/iv_photo"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_overview"/>

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_lbl_overview"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="4dp"
        android:text="@string/sample_overview"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_lbl_review"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:textColor="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_overview"
        android:text="@string/lbl_review"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_review"
        android:layout_marginTop="4dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tv_lbl_review"
        android:layout_marginHorizontal="12dp"
        android:paddingBottom="12dp"
        android:clipToPadding="false"
        tools:listitem="@layout/item_review"/>

    <TextView
        android:layout_margin="12dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/tv_empty_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_lbl_review"
        android:textColor="@color/white"
        android:visibility="gone"
        android:text="@string/empty_review"/>

</RelativeLayout>